Linux x86_64 architecture